# gcl-proj-sakai-nako

./: .env.example  .gitignore  .mise.toml  .task-env  README.md  Taskfile.yaml  pyproject.toml
.mise/tasks/: push_to_subtree  setup
_sample_data/bibliography/: sample.bib
_sample_data/ml/: input_01.json  regression_output_01.json
_sample_data/quarto/html_template_partial/: title-slide.html
_sample_data/template/ejs/: licenses_and_certifications.ejs
static_site/: .gitignore  _quarto-publish-site.yml  _quarto.yml  about.qmd  index.qmd  pyproject.toml
static_site/_custom_scss/: expand_toc.scss
static_site/_freeze/contents/works/slides/2023-03-19_JAWS-UG-DEI/execute-results/: html.json
static_site/_freeze/contents/works/slides/2023-05-14_GCPUG_Shiga/execute-results/: html.json
static_site/contents/blog/: blog.qmd
static_site/contents/blog/posts/: blog_post_test.qmd
static_site/contents/fragments/: fragments.qmd
static_site/contents/fragments/qmd/: quarto.qmd
static_site/contents/snippets/: index.qmd
static_site/contents/snippets/snippets/: quarto.qmd
static_site/contents/works/: licenses_and_certifications.yml  works.qmd
static_site/contents/works/books/: 2021-08-29_PhotoAlbum01.qmd
static_site/contents/works/slides/: 2023-03-19_JAWS-UG-DEI.qmd  2023-05-14_GCPUG_Shiga.qmd  slides_in_external_site.yml
static_site/contents/works/slides/_custom_scss/: style.scss
static_site/contents/works/slides/structures/: 2023-05-14_GCPUG_Shiga.qmd
static_site/internal_module/: internal.py
terraform/: .gitignore
terraform/environments/dev/: README.md  (+5 more)
(+6 files in other folders)
