[tool.poetry]
name = "gcl-proj-sakai-nako"
version = "0.1.0"
description = ""
authors = ["Sakai Nako <80052740+sakai-nako@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
